@@ -39,3 +39,16 @@ Description: Ubuntu VM builder
  .
  On recent hardware with plenty of RAM, tmpdir in /dev/shm or using a tmpfs,
  and a local mirror, you can bootstrap a vm in less than a minute.
+
+Package: python-vmbuilder-ec2
+Architecture: all
+Depends: python-vm-builder, ec2-ami-tools, python-boto
+Description: EC2 Ubuntu VM builder
+  Ubuntu vmbuilder module that automates the process of create a ready to use
+  EC2 instance based on Ubuntu. You can pass command line options to add extra
+  packages, remove packages, choose which version of Ubuntu, which mirror to use
+  etc.
+  .
+  VMBuilder module to build, upload and register EC2 instances. You will 
+  need to have an Amazon EC2 account in order to use this package.
+
