@@ -1,2 +1,11 @@
 debian/tmp/etc
-debian/tmp/usr
+debian/tmp/usr/bin/vmbuilder
+debian/tmp/usr/lib/python2.5/site-packages/VMBuilder/*.py
+debian/tmp/usr/lib/python2.5/site-packages/VMBuilder/plugins/*.py
+debian/tmp/usr/lib/python2.5/site-packages/VMBuilder/plugins/cli
+debian/tmp/usr/lib/python2.5/site-packages/VMBuilder/plugins/firstscripts
+debian/tmp/usr/lib/python2.5/site-packages/VMBuilder/plugins/kvm
+debian/tmp/usr/lib/python2.5/site-packages/VMBuilder/plugins/libvirt
+debian/tmp/usr/lib/python2.5/site-packages/VMBuilder/plugins/postinst
+debian/tmp/usr/lib/python2.5/site-packages/VMBuilder/plugins/ubuntu
+debian/tmp/usr/lib/python2.5/site-packages/VMBuilder/plugins/xen
